programming-languages-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: programming-languages-api
spec:
  selector:
    matchLabels:
      app: programming-languages-api
  template:
    metadata:
      labels:
        app: programming-languages-api
    spec:
      containers:
      - name: programming-languages-api
        image: sertanmay/programming-languages-api:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: programming-languages-api-service
spec:
  selector:
    app: programming-languages-api
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000
    nodePort: 30001
